--- a/33rd.html
+++ b/33rd.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Homepage.html"><== back to home</a>
+    <a href="index.html"><== back to home</a>
 
     <h2>33rd Street</h2>
 <table>
