--- a/Location To Terminal Map.html
+++ b/Location To Terminal Map.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<a href="Homepage.html"><== back to home</a>
+<a href="index.html"><== back to home</a>
 
 <h2>Location To Terminal Map</h2>
 <h3>MPEA - 40 Rector - Location to Port Map</h3>
