--- a/40 Rector.html
+++ b/40 Rector.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<a href="Homepage.html"><== back to home</a>
+<a href="index.html"><== back to home</a>
     
 <h2>40 Rector</h2>
 
